--- a/CHANGES
+++ b/CHANGES
@@ -1,2 +1,3 @@
 v0.1.0, 1/14/2013 -- Initial release.
 v0.2.0, 1/15/2013 -- Added Classy validator and tests
+v0.2.1, 1/15/2013 -- Fixed validate continuing on a field after failing a Required validation 
