--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,4 @@
 v0.1.0, 1/14/2013 -- Initial release.
 v0.2.0, 1/15/2013 -- Added Classy validator and tests
 v0.2.1, 1/15/2013 -- Fixed validate continuing on a field after failing a Required validation 
+v0.2.2, 1/15/2013 -- Added Pattern regex validator and tests 
