--- a/CHANGES
+++ b/CHANGES
@@ -5,4 +5,5 @@ v0.2.2, 1/15/2014 -- Added Pattern regex validator and tests
 v0.2.3, 1/15/2014 -- Added missing Not(Pattern()) error message 
 v0.3.1, 1/21/2014 -- Renamed Classy to InstanceOf, added SubclassOf
 v0.4.0, 1/23/2014 -- Added the conditional If(Then()) validator
+v0.4.1, 1/24/2014 -- Clarified the error message produced by Equals
 
