--- a/CHANGES
+++ b/CHANGES
@@ -6,4 +6,5 @@ v0.2.3, 1/15/2014 -- Added missing Not(Pattern()) error message
 v0.3.1, 1/21/2014 -- Renamed Classy to InstanceOf, added SubclassOf
 v0.4.0, 1/23/2014 -- Added the conditional If(Then()) validator
 v0.4.1, 1/24/2014 -- Clarified the error message produced by Equals
+v0.5.0, 1/28/2014 -- Introduced @rossdylan's ArgSpec validator
 
